fix: replaced Collections.singletonList for List.of